--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    {% if request.user.is_authenticated %}
+    <p>{{ request.user }}</p>
+    <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+    <a href="{% url 'login' %}">Login</a>
+    {% endif %}
+    <hr />
     My Todo List
     <a href="{% url 'task-create' %}">Add Task</a>
     <table>
