--- a/base/templates/base/task_confirm_delete.html
+++ b/base/templates/base/task_confirm_delete.html
@@ -1,9 +1,16 @@
-<h3>Delete Confirmation</h3>
-<a href="{% url 'task-list' %}">Go Back to task list</a>
+{% extends 'base/main.html' %}
+{% block content %}
 
-<form action="" method="POST">
-    {% csrf_token %}
-    <p>Are you sure that you want to delete this task?</p>
-    <p>"{{ task }}"</p>
-    <input type="submit" value="Delete" />
-</form>
+<div class="header-bar">
+    <a href="{% url 'task-list' %}">&#8592; Go Back</a>
+</div>
+
+<div class="card-body">
+    <form method="POST">
+        {% csrf_token %}
+        <p>Are your sure you want to delete this task? "{{task}}"</p>
+        <input class="button" type="submit" value="Delete" />
+    </form>
+</div>
+
+{% endblock content %}
