--- a/base/templates/base/task_form.html
+++ b/base/templates/base/task_form.html
@@ -1,8 +1,17 @@
-<h3>TaskForm</h3>
-<a href="{% url 'task-list' %}">Go Back to task list</a>
+{% extends 'base/main.html' %}
+{% block content %}
 
-<form action="" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Submit">
-</form>
+<div class="header-bar">
+    <a href="{% url 'task-list' %}">&#8592; Back</a>
+</div>
+
+
+<div class="card-body">
+    <form method="POST" action="">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input class="button" type="submit" value="Submit">
+    </form>
+</div>
+
+{% endblock content %}
