--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,46 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base/main.html' %}
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo List App</title>
-</head>
+<div class="header-bar">
+    <div>
+        <h1>Hello {{ request.user|title }}, </h1>
+        <h3 style='margin:0'>You have <i>{{ count }} incomplete ToDo task{{ count|pluralize:"s" }}</i></h3>
+    </div>
 
-<body>
     {% if request.user.is_authenticated %}
-    <p>{{ request.user }}</p>
     <a href="{% url 'logout' %}">Logout</a>
     {% else %}
     <a href="{% url 'login' %}">Login</a>
     {% endif %}
-    <hr />
-    My Todo List
-    <a href="{% url 'task-create' %}">Add Task</a>
+</div>
 
-    <form action="" method="GET">
-        <input type="text" name="search-area" value="{{ search_input }}">
-        <input type="submit" value="Search">
+
+<hr />
+My Todo List
+<a href="{% url 'task-create' %}">Add Task</a>
+
+<div id="search-add-wrapper">
+    <form method="GET" style="display: flex;">
+        <input type='text' name='search-area' value="{{search_input}}">
+        <input class="button" type="submit" value='Search'>
     </form>
+    <a id="add-link" href="{% url 'task-create' %}">&#x2b;</a>
+</div>
 
-    <table>
-        <tr>
-            <th>Item</th>
-        </tr>
-        {% for task in task_list %}
-        <tr>
-            <td>
-                {{ task.title }}
-                <a href="{% url 'task' task.id %}">View</a>
-                <a href="{% url 'task-update' task.id %}">Edit</a>
-                <a href="{% url 'task-delete' task.id %}">Delete</a>
-            </td>
-        </tr>
-        {% empty %}
-        <h3>No items in todo list.</h3>
-        {% endfor %}
-    </table>
-</body>
+<div id="tasklist" class="task-items-wrapper">
+    {% for task in task_list %}
+    <div class="task-wrapper" data-position="{{task.pk}}">
+        <div class="task-title">
+            {% if task.complete_status %}
+            <div class="task-complete-icon"></div>
+            <i><s><a href="{% url 'task-update' task.id %}">{{task}}</a></s></i> {% else %}
+            <div class="task-incomplete-icon"></div>
+            <a href="{% url 'task-update' task.id %}">{{task}}</a> {% endif %}
+        </div>
+        <div class="task-controls">
+            <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
+            <span class="handle">&nbsp;&#10247;</span>
+        </div>
+    </div>
 
-</html>
+    {% empty %}
+    <h3>No items in list</h3>
+    {% endfor %}
+</div>
+
+{% endblock content %}
